crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__rope_config_small_model.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: cfg
---
RopeConfig {
    head_dim: 64,
    max_seq_len: 2048,
    base: 10000.0,
    scaling_factor: 1.0,
}
