crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__rope_scaling_config_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: scaling
---
RopeScaling {
    scaling_type: "linear",
    factor: 4.0,
}
