crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__scatter_mode_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: modes
---
[
    Assign,
    Add,
    Max,
    Min,
]
