crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__shaped_reduction_axis_mean_keepdim.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: cfg
---
ShapedReductionConfig {
    op: Mean,
    axis: Some(
        1,
    ),
    keepdim: true,
}
