crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__shaped_reduction_global_sum.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: cfg
---
ShapedReductionConfig {
    op: Sum,
    axis: None,
    keepdim: false,
}
