crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__simd_level_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: levels
---
[
    Scalar,
    Neon,
    Sse42,
    Avx2,
    Avx512,
]
