crates/bitnet-kernels/tests/snapshots/snapshot_wave17__snapshot_wave17__simd_level_all_variants_display.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave17.rs
expression: "output.join(\"\\n\")"
---
scalar
neon
sse4.2
avx2
avx512
